Fix bottom buttons from overflow on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -283,11 +283,11 @@ article:last-of-type{
 	@media screen and (max-width: 500px) {
 		@include flexr($direction: column);
 		.social{
-			order: 3;
+			@include flexr-order(3);
 		}
 		.pagination{
-			width: 300px;
-			height: 30px;
+			width: 200px;
+			height: 50px;
 			border: 3px solid #FFF;
 			text-align: center;
 			margin: 10px auto;
